--- a/.verb.md
+++ b/.verb.md
@@ -1,8 +1,19 @@
 ## Usage
 
+Register the plugin with your [base][] application:
+
 ```js
+var Base = require('base');
+var base = new Base();
 var fragment = require('{%= name %}');
+base.use(fragment());
+
+// set a value on cache "foo"
+base.fragment.set('foo', 'one', 'two');
+
+// get the value of property "one" from cache "foo"
+var one = base.fragment.get('foo', 'one');
+//=> 'two'
 ```
 
-## API
-{%= apidocs("index.js") %}
+See [fragment-cache][] for API documentation and additional information.
